@@ -7,4 +7,4 @@ bin_SCRIPTS = gconf-config
 m4datadir=$(datadir)/aclocal
 m4data_DATA=gconf.m4
 
-EXTRA_DIST=gconf-config.in gconf.m4
+EXTRA_DIST=gconf-config.in gconf.m4 gconf.spec.in gconf.spec
