@@ -178,6 +178,7 @@ AC_SUBST(absolute_top_srcdir)
 AC_OUTPUT([
 Makefile
 gconf-config
+gconf.spec
 gconf/Makefile
 gconf/default.path
 backends/Makefile
