@@ -1,3 +1,10 @@
+2000-06-11  Eskil Heyn Olsen  <eskil@eazel.com>
+
+	* gconf.spec.in: Added a .spec file.
+	* configure.in: Generate gconf.spec.
+	* Makefile.am: Added gconf.spec.in and gconf.spec to the
+	EXTRA_DIST.	
+
 2000-06-07  Pavel Cisler  <pavel@eazel.com>
 
 	* wrappers/gtk/gconf-client.c: (gconf_client_get_string):
